--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@mui/material": "^5.14.18",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "moment": "^2.29.4",
     "pdfjs-dist": "^4.0.269",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
