--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "e-service",
   "version": "0.1.0",
+  "homepage": "https://codespaceajcl.github.io/doms/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
