--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "e-service",
   "version": "0.1.0",
-  "homepage": "https://crms.ajcl.net/doms/system",
+  "homepage": "https://codespaceajcl.github.io/doms",
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
