--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-service",
   "version": "0.1.0",
-  "homepage": "https://crms.ajcl.net/doms/system",
+  "homepage": "https://codespaceajcl.github.io/doms",
   "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.1",
     "moment": "^2.29.4",
     "pdfjs-dist": "^4.0.269",
+    "print-js": "^1.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
@@ -24,6 +25,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
