--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
+    "crypto-js": "^4.2.0",
     "moment": "^2.29.4",
+    "node-forge": "^1.3.1",
     "pdfjs-dist": "^4.0.269",
     "print-js": "^1.6.0",
     "react": "^18.2.0",
