--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e-service",
   "version": "0.1.0",
   "homepage": "https://codespaceajcl.github.io/doms",
+  "proxy": "https://crms.ajcl.net",
   "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -12,6 +13,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "crypto-js": "^4.2.0",
+    "jsencrypt": "^3.3.2",
     "moment": "^2.29.4",
     "node-forge": "^1.3.1",
     "pdfjs-dist": "^4.0.269",
