--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-service",
   "version": "0.1.0",
-  "homepage": "https://codespaceajcl.github.io/doms",
+  "homepage": "https://crms.ajcl.net/doms/system",
   "proxy": "https://crms.ajcl.net",
   "private": false,
   "dependencies": {
@@ -12,7 +12,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
-    "crypto-js": "^4.2.0",
+    "crypto-js": "^4.1.1",
     "jsencrypt": "^3.3.2",
     "moment": "^2.29.4",
     "node-forge": "^1.3.1",
@@ -40,7 +40,7 @@
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
