--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-service",
   "version": "0.1.0",
-  "homepage": "https://codespaceajcl.github.io/doms",
+  "homepage": "https://crms.ajcl.net/doms/system",
   "proxy": "https://crms.ajcl.net",
   "private": false,
   "dependencies": {
@@ -12,10 +12,8 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
-    "crypto-js": "^4.1.1",
-    "jsencrypt": "^3.3.2",
+    "crypto-js": "^3.1.9-1",
     "moment": "^2.29.4",
-    "node-forge": "^1.3.1",
     "pdfjs-dist": "^4.0.269",
     "print-js": "^1.6.0",
     "react": "^18.2.0",
@@ -30,7 +28,6 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
-    "react-select-country-list": "^2.2.3",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
